[tool.poetry]
name = "lin-kernigan"
version = "0.1.0"
description = ""
authors = ["Yampolskiy Dmitriy <yampolskiydv@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.*"
blist = "==1.3.6"
cycler = "==0.10.0"
decorator = "==4.4.2"
kiwisolver = "==1.1.0"
matplotlib = "==3.2.1"
numpy = "==1.18.2"
pyparsing = "==2.4.6"
python-dateutil = "==2.8.1"
six = "==1.14.0"
texttable = "==1.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"